--- a/Events.html
+++ b/Events.html
@@ -23,81 +23,33 @@
 		<!--	<li><a  href="Games.html">GAMES</a></li>-->
 		</ul>	
 	</nav>
-	<div class="movieContainer">
-		<div>
-			<div class="movieImg"><img src="moviePosters/deadpool.jfif" style="width:200px;height:250px;"></div>
-			<div class="inline">
-			<div class="movieTitle">DEADPOOL</div>
-			<div class="moviesBrief">This is just a sentence which describes about the movie in depth.This is just a sentence which describes about the movie in depth.This is just a sentence which describes about the movie in depth.</div>
-			<div class="rating">RATING : 99%</div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
-			</div>
+	<div class="discount"><img src="moviePosters/discount.png"></div>
+	<div class="eventContainer">
+
+		<div class="evnt">
+			<div class="movieImg"><img src="moviePosters/lauv.jpg" style="width:800px;height:250px;"></div>
+			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a>  </div>
+		
 			
 		</div>
-		<div>
-			<div class="movieImg"><img src="moviePosters/endgame.jfif" style="width:200px;height:250px;"></div>
-			<div class="inline">
-			<div class="movieTitle">AVENGERS ENDGAME</div>
-			<div class="moviesBrief">This is just a sentence which describes about the movie in depth.This is just a sentence which describes about the movie in depth.This is just a sentence which describes about the movie in depth.</div>
-			<div class="rating">RATING : 99%</div>
-			<div class="bookButton"><a href="">BOOK NOW</a> </div>
-			</div>
+		<div class="evnt">
+			<div class="movieImg"><img src="moviePosters/meta.jfif" style="width:800px;height:250px;"></div>
+			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a> </div>
+			
 			
 		</div>
-		<div class="movie">
-			<div class="movieImg"></div>
-			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
-			</div>
+		<div class="evnt">
+			<div class="movieImg"><img src="moviePosters/photography.jfif" style="width:800px;height:250px;"></div>
+			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a>  </div>
+			
 		</div>
-		<div class="movie">
-			<div class="movieImg"></div>
-			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
-			</div>
+		<div class="evnt">
+			<div class="movieImg"><img src="moviePosters/acting.jfif" style="width:800px;height:250px;"></div>
+			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a>  </div>
 		</div>
-		<div class="movie">
-			<div class="movieImg"></div>
-			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
-			</div>
-		</div>
-		<div class="movie">
-			<div class="movieImg"></div>
-			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
-			</div>
-		</div>
-		<div class="movie">
-			<div class="movieImg"></div>
-			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
-			</div>
-		</div>
-		<div class="movie">
-			<div class="movieImg"></div>
-			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
-			</div>
-		</div>
+	
+		
+		
 
 		
 	</div>
