--- a/Moviepage4.html
+++ b/Moviepage4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dead Pool</title>
+	<title>US</title>
 	<link rel="stylesheet" type="text/css" href="moviepage.css">
 	<link rel="stylesheet" type="text/css" href="homestyle.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,42 +23,42 @@
 	<div class="movInfo">
 		
 		
-		<div class="movTitle">DEADPOOL </div>
+		<div class="movTitle">US </div>
 		<div class="lang"> U/A  &nbsp ENGLISH</div>
-		<div class="genre">ACTION DRAMA FANTASY</div>
-		<div class="releaseDate">7th March, 2020</div>
-		<div class="time">1 hrs 57 mins</div>
+		<div class="genre">HORROR DRAMA THRILLER</div>
+		<div class="releaseDate">26th June, 2020</div>
+		<div class="time">1 hrs 35 mins</div>
 		
 	</div>
 	<div class="MainPoster">
-		<img src="moviePosters/deadpool.jfif">
+		<img src="moviePosters/us.jfif">
 	</div>
 	<div class="rating">
 		<p class="rate">RATING</p>
 		   <span class="fa fa-star checked"></span>
 	       <span class="fa fa-star checked"></span>
-           <span class="fa fa-star checked"></span>
-           <span class="fa fa-star checked"></span>
+           <span class="fa fa-star"></span>
+           <span class="fa fa-star"></span>
     	   <span class="fa fa-star"></span>    
 	</div>
 	<div class="mbody">
 		<div class="advert"><img src="moviePosters/advert.jfif"></div>
 		<div class="movied">
-			<div class="desc">Ajax, a twisted scientist, experiments on Wade Wilson, a mercenary, to cure him of cancer and give him healing powers. However, the experiment leaves Wade disfigured and he decides to exact revenge.</div>
+			<div class="desc">While on vacation in Santa Cruz, the Wilson family is attacked by a family of four. They realise that the people attacking them look very much like them.</div>
 			<div class="cast">CAST:</div>
 			<div class="castimg">
-				<img src="moviePosters/Miller.jfif">
-				<img src="moviePosters/Gina.jfif">
-				<img src="moviePosters/Morena.jfif">
-				<img src="moviePosters/Ryan.jfif">
-				<img src="moviePosters/Stan.jfif">
+				<img src="moviePosters/elisa.jfif">
+				<img src="moviePosters/jordan.jfif">
+				<img src="moviePosters/lupita.jfif">
+				<img src="moviePosters/shahadi.jfif">
+				<img src="moviePosters/duke.jfif">
 			</div>
 			<div class="names">
-				<p id="a1">T.J Miller</p>
-				<p id="a2">Giana Carano</p>
-				<p id="a3">Morena Baccarin </p>
-				<p id="a4"> Ryan Renolds </p>
-				<p id="a5">Stan Lee</p>
+				<p id="a16">Elisabeth Moss</p>
+				<p id="a17">Jordan Peele</p>
+				<p id="a18">Lupita </p>
+				<p id="a19"> Shahadi Wright </p>
+				<p id="a20">Winston Duke</p>
 				
 			</div>
 			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a> </div>
