--- a/Moviepage8.html
+++ b/Moviepage8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dead Pool</title>
+	<title>Guardian of the galaxy</title>
 	<link rel="stylesheet" type="text/css" href="moviepage.css">
 	<link rel="stylesheet" type="text/css" href="homestyle.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,15 +23,15 @@
 	<div class="movInfo">
 		
 		
-		<div class="movTitle">DEADPOOL </div>
+		<div class="movTitle">GUARDIAN OF THE GALAXY </div>
 		<div class="lang"> U/A  &nbsp ENGLISH</div>
-		<div class="genre">ACTION DRAMA FANTASY</div>
-		<div class="releaseDate">7th March, 2020</div>
-		<div class="time">1 hrs 57 mins</div>
+		<div class="genre">ADVENTURE SCI-FI ACTION</div>
+		<div class="releaseDate">31st April, 2019</div>
+		<div class="time">1 hrs 49 mins</div>
 		
 	</div>
 	<div class="MainPoster">
-		<img src="moviePosters/deadpool.jfif">
+		<img src="moviePosters/gaurdiansofgalaxy.jfif">
 	</div>
 	<div class="rating">
 		<p class="rate">RATING</p>
@@ -44,21 +44,21 @@
 	<div class="mbody">
 		<div class="advert"><img src="moviePosters/advert.jfif"></div>
 		<div class="movied">
-			<div class="desc">Ajax, a twisted scientist, experiments on Wade Wilson, a mercenary, to cure him of cancer and give him healing powers. However, the experiment leaves Wade disfigured and he decides to exact revenge.</div>
+			<div class="desc">In the far reaches of space, an American pilot named Peter Quill finds himself the object of a manhunt after stealing an orb coveted by the villainous Ronan. In order to evade Ronan, Quill is forced into an uneasy truce with a group of misfits including Gamora, Rocket, Drax the Destroyer and Groot.</div>
 			<div class="cast">CAST:</div>
 			<div class="castimg">
-				<img src="moviePosters/Miller.jfif">
-				<img src="moviePosters/Gina.jfif">
-				<img src="moviePosters/Morena.jfif">
-				<img src="moviePosters/Ryan.jfif">
-				<img src="moviePosters/Stan.jfif">
+				<img src="moviePosters/pratt.jfif">
+				<img src="moviePosters/dave.jfif">
+				<img src="moviePosters/karen.jfif">
+				<img src="moviePosters/vin.jfif">
+				<img src="moviePosters/zeo.jfif">
 			</div>
 			<div class="names">
-				<p id="a1">T.J Miller</p>
-				<p id="a2">Giana Carano</p>
-				<p id="a3">Morena Baccarin </p>
-				<p id="a4"> Ryan Renolds </p>
-				<p id="a5">Stan Lee</p>
+				<p id="a16">Chris Pratt</p>
+				<p id="a17">Dave Bautista</p>
+				<p id="a18">Karen Gillan </p>
+				<p id="a19"> Vin Diesel </p>
+				<p id="a20">Zoe Saldana</p>
 				
 			</div>
 			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a> </div>
