--- a/Movies.html
+++ b/Movies.html
@@ -27,7 +27,7 @@
 			<div class="movieImg"><img src="moviePosters/deadpool.jfif" style="width:200px;height:250px;"></div>
 			<div class="inline">
 			<div class="movieTitle">DEADPOOL</div>
-			<div class="moviesBrief">This is just a sentence which describes about the movie in depth.This is just a sentence which describes about the movie in depth.This is just a sentence which describes about the movie in depth.</div>
+			<div class="moviesBrief">Ajax, a twisted scientist, experiments on Wade Wilson, a mercenary, to cure him of cancer and give him healing powers. However, the experiment leaves Wade disfigured and he decides to exact revenge..</div>
 			<div class="rating">RATING : 99%</div>
 			<div class="bookButton"><a href="Moviepage1.html">BOOK NOW</a>  </div>
 			</div>
@@ -37,64 +37,64 @@
 			<div class="movieImg"><img src="moviePosters/endgame.jfif" style="width:200px;height:250px;"></div>
 			<div class="inline">
 			<div class="movieTitle">AVENGERS ENDGAME</div>
-			<div class="moviesBrief">This is just a sentence which describes about the movie in depth.This is just a sentence which describes about the movie in depth.This is just a sentence which describes about the movie in depth.</div>
+			<div class="moviesBrief">The grave course of events set in motion by Thanos that wiped out half the universe and fractured the Avengers ranks compels the remaining Avengers to take one final stand in Marvel Studios` grand conclusion to twenty-two films, "Avengers: Endgame."</div>
 			<div class="rating">RATING : 99%</div>
-			<div class="bookButton"><a href="">BOOK NOW</a> </div>
+			<div class="bookButton"><a href="Moviepage2.html">BOOK NOW</a> </div>
 			</div>
 			
 		</div>
 		<div class="movie">
-			<div class="movieImg"></div>
+			<div class="movieImg"><img src="moviePosters/joker.jfif" style="width:200px;height:250px;"></div>
 			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
+			<div class="movieTitle">JOKER</div>
+			<div class="moviesBrief">Arthur Fleck, a man struggling with loneliness and isolation, wears two masks. One, he paints on for his day job as a clown. The other is a guise he projects in an attempt to find his place in Gotham City's fractured society. Caught in a cyclical existence between apathy and cruelty, Arthur begins to make one bad decision after another. What follows is a new take on the origin story of one of cinema's most iconic villains</div>
+			<div class="rating"> RATING : 91%</div>
+			<div class="bookButton"><a href="Moviepage3.html">BOOK NOW</a>  </div>
 			</div>
 		</div>
 		<div class="movie">
-			<div class="movieImg"></div>
+			<div class="movieImg"><img src="moviePosters/us.jfif" style="width:200px;height:250px;"></div>
 			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
+			<div class="movieTitle"> US</div>
+			<div class="moviesBrief">While on vacation in Santa Cruz, the Wilson family is attacked by a family of four. They realise that the people attacking them look very much like them.</div>
+			<div class="rating">RATING : 85%</div>
+			<div class="bookButton"><a href="Moviepage4.html">BOOK NOW</a>  </div>
 			</div>
 		</div>
 		<div class="movie">
-			<div class="movieImg"></div>
+			<div class="movieImg"><img src="moviePosters/theGreatHack.jfif" style="width:200px;height:250px;"></div>
 			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
+			<div class="movieTitle">THE GREAT HACK</div>
+			<div class="moviesBrief">Exploring how a data company named Cambridge Analytica came to symbolise the dark side of social media in the wake of the 2016 U.S. presidential election, as uncovered by journalist Carole Cadwalladr</div>
+			<div class="rating">RATING : 90%</div>
+			<div class="bookButton"><a href="Moviepage5.html">BOOK NOW</a>  </div>
 			</div>
 		</div>
 		<div class="movie">
-			<div class="movieImg"></div>
+			<div class="movieImg"><img src="moviePosters/spiderMan.jfif" style="width:200px;height:250px;"></div>
 			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
+			<div class="movieTitle">SPIDERMAN FAR FROM HOME</div>
+			<div class="moviesBrief">In the latest chapter of MCU`s Spider-Man series, our friendly neighborhood superhero decides to join his best friends Ned, MJ and the rest of the gang on a European vacation. However, Peter`s plans to leave heroics behind for a few weeks are quickly scrapped when he begrudgingly agrees to help Nick Fury uncover the mystery of several elemental creature attacks, creating havoc across the continent!</div>
+			<div class="rating">RATING : 96%</div>
+			<div class="bookButton"><a href="Moviepage6.html">BOOK NOW</a>  </div>
 			</div>
 		</div>
 		<div class="movie">
-			<div class="movieImg"></div>
+			<div class="movieImg"><img src="moviePosters/blackPanther.jfif" style="width:200px;height:250px;"></div>
 			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
+			<div class="movieTitle">BLACK PANTHER</div>
+			<div class="moviesBrief">After the events of Captain America: Civil War, King T'Challa returns home to the reclusive, technologically advanced African nation of Wakanda to serve as his country's new leader. However, T'Challa soon finds that he is challenged for the throne from factions within his own country.</div>
+			<div class="rating">RAting : 89%</div>
+			<div class="bookButton"><a href="Moviepage7.html">BOOK NOW</a>  </div>
 			</div>
 		</div>
 		<div class="movie">
-			<div class="movieImg"></div>
+			<div class="movieImg"><img src="moviePosters/gaurdiansofgalaxy.jfif" style="width:200px;height:250px;"></div>
 			<div class="inline">
-			<div class="movieTitle"></div>
-			<div class="moviesBrief"></div>
-			<div class="rating"></div>
-			<div class="bookButton"><a href="">BOOK NOW</a>  </div>
+			<div class="movieTitle">GUARDIANS OF THE GLAXY</div>
+			<div class="moviesBrief">In the far reaches of space, an American pilot named Peter Quill finds himself the object of a manhunt after stealing an orb coveted by the villainous Ronan. In order to evade Ronan, Quill is forced into an uneasy truce with a group of misfits including Gamora, Rocket, Drax the Destroyer and Groot.</div>
+			<div class="rating">RAting : 93%</div>
+			<div class="bookButton"><a href="Moviepage8.html">BOOK NOW</a>  </div>
 			</div>
 		</div>
 
