--- a/Moviepage2.html
+++ b/Moviepage2.html
@@ -23,15 +23,15 @@
 	<div class="movInfo">
 		
 		
-		<div class="movTitle">DEADPOOL </div>
+		<div class="movTitle">AVENGERS ENDGAME </div>
 		<div class="lang"> U/A  &nbsp ENGLISH</div>
-		<div class="genre">ACTION DRAMA FANTASY</div>
-		<div class="releaseDate">7th March, 2020</div>
-		<div class="time">1 hrs 57 mins</div>
+		<div class="genre">ACTION DRAMA THRILLER</div>
+		<div class="releaseDate">17th March, 2019</div>
+		<div class="time">2 hrs 30 mins</div>
 		
 	</div>
 	<div class="MainPoster">
-		<img src="moviePosters/deadpool.jfif">
+		<img src="moviePosters/endGame.jfif">
 	</div>
 	<div class="rating">
 		<p class="rate">RATING</p>
@@ -39,26 +39,26 @@
 	       <span class="fa fa-star checked"></span>
            <span class="fa fa-star checked"></span>
            <span class="fa fa-star checked"></span>
-    	   <span class="fa fa-star"></span>    
+    	   <span class="fa fa-star checked" ></span>    
 	</div>
 	<div class="mbody">
 		<div class="advert"><img src="moviePosters/advert.jfif"></div>
 		<div class="movied">
-			<div class="desc">Ajax, a twisted scientist, experiments on Wade Wilson, a mercenary, to cure him of cancer and give him healing powers. However, the experiment leaves Wade disfigured and he decides to exact revenge.</div>
+			<div class="desc">The grave course of events set in motion by Thanos that wiped out half the universe and fractured the Avengers ranks compels the remaining Avengers to take one final stand in Marvel Studios` grand conclusion to twenty-two films, "Avengers: Endgame."</div>
 			<div class="cast">CAST:</div>
 			<div class="castimg">
-				<img src="moviePosters/Miller.jfif">
-				<img src="moviePosters/Gina.jfif">
-				<img src="moviePosters/Morena.jfif">
-				<img src="moviePosters/Ryan.jfif">
-				<img src="moviePosters/Stan.jfif">
+				<img src="moviePosters/chris.jfif">
+				<img src="moviePosters/hemsworth.jfif">
+				<img src="moviePosters/pratt.jfif">
+				<img src="moviePosters/robert.jfif">
+				<img src="moviePosters/scarlett.jfif">
 			</div>
 			<div class="names">
-				<p id="a1">T.J Miller</p>
-				<p id="a2">Giana Carano</p>
-				<p id="a3">Morena Baccarin </p>
-				<p id="a4"> Ryan Renolds </p>
-				<p id="a5">Stan Lee</p>
+				<p id="a6">Chris Evans</p>
+				<p id="a7">Chris Hemsworth</p>
+				<p id="a8">Chris Pratt </p>
+				<p id="a9"> Robert Downey Jr. </p>
+				<p id="a10">Scarlett johansson</p>
 				
 			</div>
 			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a> </div>
