--- a/Moviepage3.html
+++ b/Moviepage3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dead Pool</title>
+	<title>Joker</title>
 	<link rel="stylesheet" type="text/css" href="moviepage.css">
 	<link rel="stylesheet" type="text/css" href="homestyle.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,15 +23,15 @@
 	<div class="movInfo">
 		
 		
-		<div class="movTitle">DEADPOOL </div>
+		<div class="movTitle">Joker </div>
 		<div class="lang"> U/A  &nbsp ENGLISH</div>
-		<div class="genre">ACTION DRAMA FANTASY</div>
-		<div class="releaseDate">7th March, 2020</div>
-		<div class="time">1 hrs 57 mins</div>
+		<div class="genre">DRAMA </div>
+		<div class="releaseDate">26th AUGUST, 2019</div>
+		<div class="time">2 hrs 02 mins</div>
 		
 	</div>
 	<div class="MainPoster">
-		<img src="moviePosters/deadpool.jfif">
+		<img src="moviePosters/joker.jfif">
 	</div>
 	<div class="rating">
 		<p class="rate">RATING</p>
@@ -44,21 +44,21 @@
 	<div class="mbody">
 		<div class="advert"><img src="moviePosters/advert.jfif"></div>
 		<div class="movied">
-			<div class="desc">Ajax, a twisted scientist, experiments on Wade Wilson, a mercenary, to cure him of cancer and give him healing powers. However, the experiment leaves Wade disfigured and he decides to exact revenge.</div>
+			<div class="desc">Arthur Fleck, a man struggling with loneliness and isolation, wears two masks. One, he paints on for his day job as a clown. The other is a guise he projects in an attempt to find his place in Gotham City's fractured society. Caught in a cyclical existence between apathy and cruelty, Arthur begins to make one bad decision after another. What follows is a new take on the origin story of one of cinema's most iconic villains</div>
 			<div class="cast">CAST:</div>
 			<div class="castimg">
-				<img src="moviePosters/Miller.jfif">
-				<img src="moviePosters/Gina.jfif">
-				<img src="moviePosters/Morena.jfif">
-				<img src="moviePosters/Ryan.jfif">
-				<img src="moviePosters/Stan.jfif">
+				<img src="moviePosters/jqn.jfif">
+				<img src="moviePosters/marc.jfif">
+				<img src="moviePosters/france.jfif">
+				<img src="moviePosters/de.jfif">
+				<img src="moviePosters/shea.jfif">
 			</div>
 			<div class="names">
-				<p id="a1">T.J Miller</p>
-				<p id="a2">Giana Carano</p>
-				<p id="a3">Morena Baccarin </p>
-				<p id="a4"> Ryan Renolds </p>
-				<p id="a5">Stan Lee</p>
+				<p id="a11">Joaquin Phoenix</p>
+				<p id="a12">Marc Maron</p>
+				<p id="a13">Frances Conroy </p>
+				<p id="a14"> Robert De Niro </p>
+				<p id="a15">Shea Whingam</p>
 				
 			</div>
 			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a> </div>
