--- a/Moviepage5.html
+++ b/Moviepage5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dead Pool</title>
+	<title>The Great Hack</title>
 	<link rel="stylesheet" type="text/css" href="moviepage.css">
 	<link rel="stylesheet" type="text/css" href="homestyle.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,42 +23,42 @@
 	<div class="movInfo">
 		
 		
-		<div class="movTitle">DEADPOOL </div>
+		<div class="movTitle">THE GREAT HACK </div>
 		<div class="lang"> U/A  &nbsp ENGLISH</div>
-		<div class="genre">ACTION DRAMA FANTASY</div>
-		<div class="releaseDate">7th March, 2020</div>
-		<div class="time">1 hrs 57 mins</div>
+		<div class="genre">SCI-FI THRILLER</div>
+		<div class="releaseDate">18th 	April, 2020</div>
+		<div class="time">1 hrs 20 mins</div>
 		
 	</div>
 	<div class="MainPoster">
-		<img src="moviePosters/deadpool.jfif">
+		<img src="moviePosters/theGreatHack.jfif">
 	</div>
 	<div class="rating">
 		<p class="rate">RATING</p>
 		   <span class="fa fa-star checked"></span>
 	       <span class="fa fa-star checked"></span>
            <span class="fa fa-star checked"></span>
-           <span class="fa fa-star checked"></span>
+           <span class="fa fa-star"></span>
     	   <span class="fa fa-star"></span>    
 	</div>
 	<div class="mbody">
 		<div class="advert"><img src="moviePosters/advert.jfif"></div>
 		<div class="movied">
-			<div class="desc">Ajax, a twisted scientist, experiments on Wade Wilson, a mercenary, to cure him of cancer and give him healing powers. However, the experiment leaves Wade disfigured and he decides to exact revenge.</div>
+			<div class="desc">Exploring how a data company named Cambridge Analytica came to symbolise the dark side of social media in the wake of the 2016 U.S. presidential election, as uncovered by journalist Carole Cadwalladr.</div>
 			<div class="cast">CAST:</div>
 			<div class="castimg">
-				<img src="moviePosters/Miller.jfif">
-				<img src="moviePosters/Gina.jfif">
-				<img src="moviePosters/Morena.jfif">
-				<img src="moviePosters/Ryan.jfif">
-				<img src="moviePosters/Stan.jfif">
+				<img src="moviePosters/paul.jfif">
+				<img src="moviePosters/carole.jfif">
+				<img src="moviePosters/Christopher.jfif">
+				<img src="moviePosters/kaiser.jfif">
+				<img src="moviePosters/david.jfif">
 			</div>
 			<div class="names">
-				<p id="a1">T.J Miller</p>
-				<p id="a2">Giana Carano</p>
-				<p id="a3">Morena Baccarin </p>
-				<p id="a4"> Ryan Renolds </p>
-				<p id="a5">Stan Lee</p>
+				<p id="a21">Paul Hilder</p>
+				<p id="a22">Carole Cadwalladr</p>
+				<p id="a23">Christopher Wylie </p>
+				<p id="a24">Brittany Kaiser</p>
+				<p id="a25">David Carroll</p>
 				
 			</div>
 			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a> </div>
