--- a/Moviepage6.html
+++ b/Moviepage6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dead Pool</title>
+	<title>Spiderman Far From Home</title>
 	<link rel="stylesheet" type="text/css" href="moviepage.css">
 	<link rel="stylesheet" type="text/css" href="homestyle.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,15 +23,15 @@
 	<div class="movInfo">
 		
 		
-		<div class="movTitle">DEADPOOL </div>
+		<div class="movTitle">SPIDERMAN FAR FROM HOME </div>
 		<div class="lang"> U/A  &nbsp ENGLISH</div>
-		<div class="genre">ACTION DRAMA FANTASY</div>
-		<div class="releaseDate">7th March, 2020</div>
-		<div class="time">1 hrs 57 mins</div>
+		<div class="genre">ADVENTURE ACTION ROMANCE</div>
+		<div class="releaseDate">21st November, 2019</div>
+		<div class="time">2 hrs 30 mins</div>
 		
 	</div>
 	<div class="MainPoster">
-		<img src="moviePosters/deadpool.jfif">
+		<img src="moviePosters/spiderMan.jfif">
 	</div>
 	<div class="rating">
 		<p class="rate">RATING</p>
@@ -44,21 +44,21 @@
 	<div class="mbody">
 		<div class="advert"><img src="moviePosters/advert.jfif"></div>
 		<div class="movied">
-			<div class="desc">Ajax, a twisted scientist, experiments on Wade Wilson, a mercenary, to cure him of cancer and give him healing powers. However, the experiment leaves Wade disfigured and he decides to exact revenge.</div>
+			<div class="desc">In the latest chapter of MCU`s Spider-Man series, our friendly neighborhood superhero decides to join his best friends Ned, MJ and the rest of the gang on a European vacation. However, Peter`s plans to leave heroics behind for a few weeks are quickly scrapped when he begrudgingly agrees to help Nick Fury uncover the mystery of several elemental creature attacks, creating havoc across the continent!</div>
 			<div class="cast">CAST:</div>
 			<div class="castimg">
-				<img src="moviePosters/Miller.jfif">
-				<img src="moviePosters/Gina.jfif">
-				<img src="moviePosters/Morena.jfif">
-				<img src="moviePosters/Ryan.jfif">
-				<img src="moviePosters/Stan.jfif">
+				<img src="moviePosters/tom.jfif">
+				<img src="moviePosters/Zendaya.jfif">
+				<img src="moviePosters/jacob.jfif">
+				<img src="moviePosters/samuel.jfif">
+				<img src="moviePosters/jake.jfif">
 			</div>
 			<div class="names">
-				<p id="a1">T.J Miller</p>
-				<p id="a2">Giana Carano</p>
-				<p id="a3">Morena Baccarin </p>
-				<p id="a4"> Ryan Renolds </p>
-				<p id="a5">Stan Lee</p>
+				<p id="a26">Tom Holland</p>
+				<p id="a27">Zendaya</p>
+				<p id="a28">Jacob Matalon </p>
+				<p id="a29"> Samuel L. Jackson </p>
+				<p id="a30">Jake Gyllenhaal</p>
 				
 			</div>
 			<div class="bkbtn"><a href="bookM.html">BOOK NOW</a> </div>
